[package]
name = "boj"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "1000"
path = "1000. A+B/1000.rs"

[[bin]]
name = "1001"
path = "1001. A-B/1001.rs"

[[bin]]
name = "1008"
path = "1008. A나누기B/1008.rs"

[[bin]]
name = "1009"
path = "1009. 분산처리/1009.rs"

[[bin]]
name = "1152"
path = "1152. 단어의 개수/1152.rs"

[[bin]]
name = "1330"
path = "1330. 두 수 비교하기/1330. 두 수 비교하기.rs"

[[bin]]
name = "2438"
path = "2438. 별 찍기 - 1/2438.rs"

[[bin]]
name = "2439"
path = "2439. 별 찍기 - 2/2439.rs"

[[bin]]
name = "2475"
path = "2475. 검증수/2475.rs"

[[bin]]
name = "2557"
path = "2557. Hello World/2557.rs"

[[bin]]
name = "2562"
path = "2562. 최댓값/2562.rs"

[[bin]]
name = "2577"
path = "2577. 숫자의 개수/2577.rs"

[[bin]]
name = "2675"
path = "2675. 문자열 반복/2675.rs"

[[bin]]
name = "2739"
path = "2739. 구구단/2739.rs"

[[bin]]
name = "2741"
path = "2741. N 찍기/2741.rs"

[[bin]]
name = "2753"
path = "2753. 윤년/2753.rs"

[[bin]]
name = "2884"
path = "2884. 알람 시계/2884.rs"

[[bin]]
name = "2920"
path = "2920. 음계/2920.rs"

[[bin]]
name = "3052"
path = "3052. 나머지/3052.rs"

[[bin]]
name = "8958"
path = "8958. OX퀴즈/8958.rs"

[[bin]]
name = "9498"
path = "9498. 시험 성적/9498.rs"

[[bin]]
name = "10171"
path = "10171. 고양이/10171.rs"

[[bin]]
name = "10172"
path = "10172. 개/10172.rs"

[[bin]]
name = "10250"
path = "10250. ACM 호텔/10250.rs"

[[bin]]
name = "10809"
path = "10809. 알파벳 찾기/10809.rs"

[[bin]]
name = "10818"
path = "10818. 최소, 최대/10818.rs"

[[bin]]
name = "10869"
path = "10869. 사칙연산/10869.rs"

[[bin]]
name = "10871"
path = "10871. X보다 작은 수/10871.rs"

[[bin]]
name = "10950"
path = "10950. A+B-3/10950.rs"

[[bin]]
name = "10951"
path = "10951. A+B-4/10951.rs"

[[bin]]
name = "10952"
path = "10952. A+B-5/10952.rs"

[[bin]]
name = "10998"
path = "10998. A*B/10998.rs"

[[bin]]
name = "11654"
path = "11654. 아스키코드/11654.rs"

[[bin]]
name = "11720"
path = "11720. 숫자의 합/11720.rs"

[[bin]]
name = "25083"
path = "25083. 새싹/25083.rs"

[[bin]]
name = "28766"
path = "28766. 문자와 문자열/28766.rs"

[[bin]]
name = "31403"
path = "31403. A+B-C/31403.rs"
